Configure notification appearance and behavior

--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
     <meta property="og:description" content="診断メーカーの「せやかて工藤診断」の結果を毎朝通知します">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://seyakate.netlify.com/">
-    <meta property="og:image" content="https://seyakate.netlify.com/og-image.png"> <!-- Needs to be an absolute URL to be recognized by Twitter Cards -->
+    <meta property="og:image" content="https://seyakate.netlify.com/logo.png"> <!-- Needs to be an absolute URL to be recognized by Twitter Cards -->
     <meta property="og:locale" content="ja_JP">
 
     <!-- Twitter cards -->
